<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MypCloud</string>
    <string name="bienvenido">Bienvenido a My pCloud</string>
    <string name="manten_salvo">Mantén a salvo tus archivos en la nube.</string>
    <string name="registrate">¿No tienes una cuenta? Regístrate</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="login">Inicio de sesión</string>
    <string name="int_mail_pass">Introduce email y contraseña para acceder  a tus archivos en la nube.</string>
    <string name="email">Email</string>
    <string name="contrasenia">Contraseña</string>
    <string name="olvidaste">¿Olvidaste tu contraseña? Recupérala</string>
    <string name="register">Registro de usuario</string>
    <string name="texto_reg">Introduce email y contraseña para poder acceder a las ventajas que ofrece pcloud.</string>
    <string name="registrarse">Registrarse</string>
    <string name="inicia">¿Ya tienes cuenta? Inicia sesion</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="texto_correo">Introduce tu correo electrónico para poder recuperar tu contraseña.</string>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="archivos">Archivos</string>
</resources>