<?xml version="1.0" encoding="utf-8"?>
<!-- login -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true">

    <!-- Inicio de sesión -->
    <TextView
        android:id="@+id/inicio_de_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="105dp"
        android:layout_marginTop="58dp"
        android:gravity="top"
        android:text="@string/login"
        android:textAppearance="@style/titulo" />

    <!-- Introduce email y contraseña para acceder a tus archivos en la nube. -->
    <TextView
        android:id="@+id/introduce_e"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="124dp"
        android:gravity="top"
        android:text="@string/int_mail_pass"
        android:textAppearance="@style/subtitulo" />

    <!-- Rectangle 2 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="71dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:background="@drawable/rectangle_2"
        />
    <!-- Email -->
    <TextView
        android:id="@+id/email"
        android:layout_width="41dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="89dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="237dp"
        android:text="@string/email"
        android:textAppearance="@style/email"
        android:gravity="top"
        />

    <!-- Rectangle 3 -->
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="71dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="296dp"
        android:background="@drawable/rectangle_3"
        />
    <!-- Contraseña -->
    <TextView
        android:id="@+id/contrasenia"
        android:layout_width="88dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="89dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="307dp"
        android:text="@string/contrasenia"
        android:textAppearance="@style/email"
        android:gravity="top"
        />

    <!-- Rectangle azul -->
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="79dp"
        android:layout_marginTop="463dp"
        android:background="@drawable/rectangle_azul" />
    <!-- Iniciar sesión -->
    <TextView
        android:id="@+id/iniciar_ses"
        android:layout_width="99dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="473dp"
        android:gravity="top"
        android:text="@string/iniciar_sesion"
        android:textAppearance="@style/iniciar_sesion" />

    <!-- ¿Olvidaste tu contraseña? Recupérala -->
    <TextView
        android:id="@+id/olvidaste_t"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="347dp"
        android:gravity="top"
        android:text="@string/olvidaste"
        android:textAppearance="@style/subtitulo" />

    <!-- ¿No tienes una cuenta? Regístrate -->
    <TextView
        android:id="@+id/no_tienes_u"
        android:layout_width="270dp"
        android:layout_height="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="81dp"
        android:layout_marginTop="523dp"
        android:gravity="top"
        android:text="@string/registrate"
        android:textAppearance="@style/texto_normal" />

</RelativeLayout>
