<?xml version="1.0" encoding="utf-8"?>
<!-- register -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true">

    <!-- Registro de usuario -->
    <TextView
        android:id="@+id/reg_usu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="58dp"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/titulo" />

    <!-- Introduce email y contra etc -->
    <TextView
        android:id="@+id/introduce_e"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="69dp"
        android:layout_marginTop="124dp"
        android:gravity="top"
        android:text="@string/texto_reg"
        android:textAppearance="@style/subtitulo" />

    <!-- Rectangle 2 -->
    <View
        android:id="@+id/rectangle_2"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="71dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="226dp"
        android:background="@drawable/rectangle_2"
        />
    <!-- Email -->
    <EditText
        android:id="@+id/email"
        android:layout_width="224dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="237dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/email"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/email" />

    <!-- Rectangle 3 -->
    <View
        android:id="@+id/rectangle_3"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="71dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="296dp"
        android:background="@drawable/rectangle_3"
        />
    <!-- Contraseña -->
    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="307dp"
        android:background="@null"
        android:inputType="textPassword"
        android:gravity="top"
        android:hint="@string/contrasenia"
        android:maxLines="1"
        android:ellipsize="end"
        android:singleLine="true"
        android:textAppearance="@style/email" />

    <!-- Rectangle azul -->
    <View
        android:id="@+id/rectangle_1"
        android:layout_width="252dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="73dp"
        android:layout_marginTop="418dp"
        android:onClick="clicEnRegistrarse"
        android:background="@drawable/rectangle_azul" />

    <!-- Ya tienes cuenta? Inicia sesión-->
    <TextView
        android:id="@+id/inicia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="474dp"
        android:gravity="top"
        android:text="@string/inicia"
        android:onClick="clicEnIniciarSesion"
        android:textAppearance="@style/texto_normal" />

    <!-- Registrarse-->
    <TextView
        android:id="@+id/iniciar_ses"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="156dp"
        android:layout_marginTop="427dp"
        android:gravity="top"
        android:text="@string/registrarse"
        android:onClick="clicEnRegistrarse"
        android:textAppearance="@style/iniciar_sesion" />

</RelativeLayout>
